--- a/styles/ApprentissageSupervise.css
+++ b/styles/ApprentissageSupervise.css
@@ -36,7 +36,7 @@ body {
 
 .game-container {
     display: flex;
-    max-width: 1200px;
+    max-width: 1400px;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -146,13 +146,10 @@ h1, h2 {
     );
 }
 
-#basket {
+#baskets-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     margin-top: 20px;
-    border: 2px dashed var(--black-color);
-    padding: 10px;
-    min-height: 60px;
 }
 
 .basket {
