--- a/styles/ApprentissageSupervise.css
+++ b/styles/ApprentissageSupervise.css
@@ -102,6 +102,7 @@ h1, h2 {
 
 #collected-shapes {
     display: flex;
+    gap: 10px;
     justify-content: center;
     margin-top: 10px;
     padding: 10px;
@@ -110,13 +111,9 @@ h1, h2 {
 }
 
 .shape {
-    width: 50px;
-    height: 50px;
-    margin: 0 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
 }
 .shape:hover {
     cursor: pointer;
@@ -133,10 +130,10 @@ h1, h2 {
 .shape.triangle {
     width: 0;
     height: 0;
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    border-bottom: 50px solid;
-    background: none;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-bottom: 30px solid;
+
 }
 
 .shape.star {
@@ -152,14 +149,34 @@ h1, h2 {
     margin-top: 20px;
 }
 
-.basket {
+.baskets {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 20px;
-    border: 2px dashed var(--black-color);
+}
+
+
+.basket {
+    border: 2px solid #000;
     padding: 10px;
-    min-height: 60px;
-    flex: 1;
+    width: 22%;
+    text-align: center;
+}
+
+.slot {
+    width: 50px;
+    height: 50px;
+    border: 1px dashed #ccc;
+    margin: 5px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.shape {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
 }
 
 button {
