--- a/styles/ApprentissageSupervise.css
+++ b/styles/ApprentissageSupervise.css
@@ -1,6 +1,5 @@
 /* Global CSS */
-@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=VT323&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -17,7 +16,7 @@
 }
 
 body {
-    font-family: 'Luckiest Guy', sans-serif;
+    font-family: "Poppins", sans-serif;
     letter-spacing: 2px;
     width: 100vw;
     height: 100vh;
@@ -153,9 +152,9 @@ h1, h2 {
 }
 
 .slot {
-    width: 50px;
+    width: 60px;
     height: 50px;
-    border: 1px dashed #ccc;
+    border: 1px dashed #696868;
     margin: 5px auto;
     display: flex;
     align-items: center;
