--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=VT323&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -20,19 +19,19 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: "Press Start 2P", sans-serif;
+    font-family: "Poppins", sans-serif;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     background: linear-gradient(45deg, var(--green-color), var(--blue-color));
 }
 h1 {
-    font-size: 1.6rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
 }
 .btn {
     font-size: 1.5rem;
-    padding: 1.5rem 1.5rem;
+    padding: 1.2rem 1.2rem;
     background-color: #007bff;
     color: white;
     text-decoration: none;
